--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
-                    <a href="{% url about %}">About</a>
+                    <a href="{% url 'about' %}">About</a>
                     <a href="{% url 'index' %}#how-it-works">How It Works</a>
                     <a href="{% url 'safety' %}">Safety Tips</a>
                 </div>
