--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
     </ul>
     <p>
         Made by Siva Prasad – aspiring data scientist.<br>
-        For questions or feedback, contact: <em>your-email@example.com</em>
+        For questions or feedback, contact: <em>photobuddy001@gmail.com</em>
     </p>
 </div>
 {% endblock %}
