--- a/templates/base.html
+++ b/templates/base.html
@@ -110,9 +110,9 @@
                 <div class="footer-section">
                     <h4>Connect</h4>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/siva.prasad.419683/"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.instagram.com/friendly_siva___420/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/siva.prasad.419683/"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
