--- a/static/css/home.css
+++ b/static/css/home.css
@@ -60,10 +60,23 @@
     opacity: 0.8;
 }
 
-.hero-image img {
+.hero-carousel {
+    position: relative;
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.hero-carousel img {
     width: 100%;
     height: auto;
+    border-radius: 8px;
+    position: absolute;
+    left: 0; top: 0;
+    transition: opacity 0.7s;
 }
+
 
 /* How It Works */
 .how-it-works {
