--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -17,7 +17,7 @@
         <li>If you have privacy concerns, contact us for assistance.</li>
     </ul>
     <p>
-        For questions, contact <em>friendlysiva143@gmail.com</em>.
+        For questions, contact <em>photobuddy001@gmail.com</em>.
     </p>
 </div>
 {% endblock %}
