--- a/templates/terms.html
+++ b/templates/terms.html
@@ -17,7 +17,7 @@
         <li>Photo Buddy reserves the right to modify these terms at any time.</li>
     </ul>
     <p>
-        For questions, reach us at <em>friendlysiva143@gmail.com</em>.
+        For questions, reach us at <em>photobuddy001@gmail.com</em>.
     </p>
 </div>
 {% endblock %}
