--- a/templates/index.html
+++ b/templates/index.html
@@ -54,8 +54,8 @@
 
             <div class="hero-carousel">
                 <img src="{% static 'images/logo.png' %}" class="carousel-img" alt="Photo 1" style="display:block;">
-                <img src="{% static 'images/photo2.jpg' %}" class="carousel-img" alt="Photo 2" style="display:none;">
-                <img src="{% static 'images/photo3.jpg' %}" class="carousel-img" alt="Photo 3" style="display:none;">
+                <img src="{% static 'images/photo2.png' %}" class="carousel-img" alt="Photo 2" style="display:none;">
+                <img src="{% static 'images/photo3.png' %}" class="carousel-img" alt="Photo 3" style="display:none;">
                 <!-- Add more images as needed -->
             </div>
 
