--- a/templates/auth/settings.html
+++ b/templates/auth/settings.html
@@ -50,6 +50,7 @@
                 <textarea id="message" name="message" rows="4" class="form-control"></textarea>
             </div>
             <button type="submit" name="send_message" class="btn btn-info">Send Message</button>
+            <b>send manual email to <a href="mailto:photobuddy001@gmail.com">photobuddy001@gmail.com</a> if you can't send here with your registered email id. </b>
         </form>
     </div>
 
