--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -17,7 +17,7 @@
         <li>If you have privacy concerns, contact us for assistance.</li>
     </ul>
     <p>
-        For questions, contact <em>photobuddy001@gmail.com</em>.
+        For questions, contact <em><a href="mailto:photobuddy001@gmail.com">photobuddy001@gmail.com</a></em>.
     </p>
 </div>
 {% endblock %}
