--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -32,7 +32,8 @@
             </div>
 
             <div style="margin-top:2em; text-align:center;">
-                <a href="{% url 'logout' %}" class="btn btn-outline" style="margin-left:15px;">Logout</a>
+                <a href="{% url 'feedback_and_logout' %}" class="btn btn-outline" style="margin-left:15px;">Logout</a>
+
             </div>
         </div>
     </div>
