--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                     <a href="{% url 'chat_list' %}">Chats</a>
                     {% if request.user.is_authenticated %}
                         <a href="{% url 'profile' %}">Profile</a>
-                        <a href="{% url 'logout' %}">Logout</a>
+                        <a href="{% url 'feedback_and_logout' %}">Logout</a>
                     {% else %}
                         <a href="{% url 'login' %}">Login</a>
                         <a href="{% url 'register' %}">Sign Up</a>
