Update project code

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
             <!-- Desktop Menu -->
             <div class="nav-menu" id="navMenu">
                 <a href="{% url 'home' %}" class="nav-link">Home</a>
+                <a href="{% url 'posts:posts_feed' %}" class="nav-link">Posts</a>
                 <a href="{% url 'map' %}" class="nav-link">Find Buddies</a>
 
                 <div class="dropdown nav-link">
