--- a/templates/photos/recommended.html
+++ b/templates/photos/recommended.html
@@ -1,5 +1,6 @@
 <h2>Recommended for You</h2>
 <div class="posts-grid">
+  <!--
 {% if posts %}
 
   {% for post in posts %}
@@ -11,7 +12,7 @@
   {% endfor %}
   {% else %}
 <p>No recommendations available yet. Check back later!</p>
-{% endif %}
+{% endif %}-->
 </div>
 
 <style>
